# plyconverter5

./: README.md
PLY-Converter/: README.md  app.py  dependencies.txt  ply_converter.py  pyproject.toml  replit.md  run_local.py
PLY-Converter/static/css/: style.css
PLY-Converter/static/js/: main.js
PLY-Converter/templates/: index.html
