[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.4.2",
    "flask>=3.1.2",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "plyfile>=1.1.2",
    "pygltflib>=1.16.5",
    "pyqt5>=5.15.11",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "trimesh>=4.7.4",
    "werkzeug>=3.1.3",
]
